--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,11 @@
 h1{
     color: blue;
+    background-color: lightblue;
+    text-align: center;
+    padding: 10px;
+}
+
+h2{
+    border: 1px solid blue;
+    background-color: gray;
 }
